third_party/move/move-compiler-v2/tests/checking/naming/underscore.exp

Diagnostics:
error: undeclared `_`
  ┌─ tests/checking/naming/underscore.move:8:17
  │
8 │         let x = _ + 3;
  │                 ^

error: undeclared `_`
  ┌─ tests/checking/naming/underscore.move:9:13
  │
9 │         x + _
  │             ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:14:17
   │
14 │         let x = _ + 3;
   │                 ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:15:13
   │
15 │         _ = _ + 1;
   │             ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:16:13
   │
16 │         x + _
   │             ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:21:13
   │
21 │         _ = _ + 2;
   │             ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:22:9
   │
22 │         _
   │         ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:27:13
   │
27 │         _ = _ + 3;
   │             ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:28:9
   │
28 │         _
   │         ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:33:10
   │
33 │          _
   │          ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:38:9
   │
38 │         _  // undefined
   │         ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:42:17
   │
42 │         let _ = _;
   │                 ^

error: undeclared `_`
   ┌─ tests/checking/naming/underscore.move:43:9
   │
43 │         _
   │         ^

error: cannot pass `integer` to a function which expects argument of type `|u64|u64`
   ┌─ tests/checking/naming/underscore.move:59:21
   │
59 │         fun10(4, 3, 2)
   │                     ^
